Changed the status select to use an enum instead of strings. And changed the pagination to have a clearer style for when a button is pressable and when not.3